tests/bits-param/duplicate-param-1.stderr
error: encountered duplicate `bits` parameter: duplicate set to 32
 --> $DIR/duplicate-param-1.rs:3:23
  |
3 | #[bitfield(bits = 32, bits = 32)]
  |                       ^^^^

error: previous `bits` parameter here
 --> $DIR/duplicate-param-1.rs:3:12
  |
3 | #[bitfield(bits = 32, bits = 32)]
  |            ^^^^
